--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-slate
 name: Edison
 description: Developer
-avatar: https://avatars2.githubusercontent.com/u/16091146?s=460&v=4
+avatar: https://github.com/EdisonCat/edisoncat.github.io/dv.jpeg
